--- a/views/demandeAvance.html
+++ b/views/demandeAvance.html
@@ -161,7 +161,7 @@
           
           <div class="input-prepend input-group col-md-6 col-sm-6 col-xs-12">
             <span class="add-on input-group-addon"><i class="glyphicon glyphicon-calendar fa fa-calendar"></i></span>
-            <input type="text" style="width: 200px" name="moisNf" id="moisNf" class="form-control" value="Janvier">
+            <input type="text" style="width: 200px" onclick="calendarInit();" name="moisAvances" id="moisAvances" class="form-control" value="Janvier">
           </div>
         </div>
 
@@ -178,8 +178,8 @@
 
          <div class="title_right">
         <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
-        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">Statut : </label>
-        <label class="control-label col-md-6 col-sm-6 col-xs-12" for="name">Brouillon </label>
+        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">Statut: </label>
+        <i><label class="control-label col-md-6 col-sm-6 col-xs-12" for="name">Brouillon </label></i>
         </div>
       </div>
     </div>
@@ -193,7 +193,7 @@
       <div class="col-md-12">
         <div class="x_panel">
           <div class="x_title">
-            <h2>Avances de la note de frais du mois de <b>janvier 2016 </b><small></small></h2>
+            <h2>Avances de la note de frais du mois de <b id ="moisCourant"></b><small></small></h2>
             <ul class="nav navbar-right panel_toolbox">
               <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
               </li>
@@ -288,8 +288,86 @@
       // }
     }
 
+ // Month Picker Proprietes
+ 
+
+    var today = new Date();
+    var mm = today.getMonth()+1; 
+    var yyyy = today.getFullYear();
+
+    if(mm<10) {
+      mm='0'+mm
+    } 
+    today = mm+'/'+yyyy;
+
+    console.log(today);
+
+
+    function calendarInit(){
+
+      $('#moisAvances').Monthpicker({
+
+        onSelect: function () {
+          console.log($('#moisAvances').val());
+          $('#moisCourant').html($('#moisAvances').val());
+
+          
+        }
+      });
+
+      $('#moisAvances').Monthpicker('option', { maxValue: today });
+    }
+
+
 
     $(document).ready(function(){
+
+      var month ;
+
+      switch (mm){
+        case "01" :
+          month = "Jan";
+          break;
+        case "02" :
+          month = "Fev";
+          break;
+        case "03" :
+          month = "Mar";
+          break;
+        case "04" :
+          month = "Avr";
+          break;
+        case "05" :
+          month = "Mai";
+          break;
+        case "06" :
+          month = "Jun";
+          break;
+        case "07" :
+          month = "Jul";
+          break;
+        case "08" :
+          month = "Aou";
+          break;
+        case "09" :
+          month = "Sep";
+          break;
+        case "10" :
+          month = "Oct";
+          break;
+        case "11" :
+          month = "Nov";
+          break;
+        case "12" :
+          month = "Dec";
+          break;
+      }
+
+      $('#moisCourant').html(mm+"/"+yyyy);
+
+      $('#moisAvances').val(month+" "+yyyy);
+
+
 
       var handleDataTableButtons = function() {
         if ($("#datatable-buttons").length) {
@@ -403,7 +481,6 @@
 
 
 
-    $('#moisNf').Monthpicker();
   </script>
 
 
