--- a/views/adminAjoutCollab.html
+++ b/views/adminAjoutCollab.html
@@ -8,11 +8,7 @@
     <link href="../vendors/select2/dist/css/select2.min.css" rel="stylesheet">
     
     
-    
   </head>
-
-
-
         <!-- page content -->
           <div class="">
             <div class="page-title">
@@ -20,17 +16,6 @@
                 <h3>Ajouter un nouveau collaborateur </h3>
               </div>
 
-
-              <div class="title_right">
-                <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
-                  <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search for...">
-                    <span class="input-group-btn">
-                              <button class="btn btn-default" type="button">Go!</button>
-                          </span>
-                  </div>
-                </div>
-              </div>
             </div>
             <div class="clearfix"></div>
 
@@ -56,12 +41,7 @@
                         </div>
                       </div>
 
-                      
-
-                   
-
-
-
+                    
 
                       <div class="item form-group">
                         <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">Prenom  <span class="required">*</span>
@@ -152,37 +132,11 @@
                         
                       </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
                       <div class="ln_solid"></div>
                       <div class="form-group">
                         <div class="col-md-6 col-md-offset-3">
-                          <button type="submit" class="btn btn-primary">Cancel</button>
-                          <button id="send" type="submit" class="btn btn-success">Submit</button>
+                          <button type="submit" class="btn btn-warning">Annuler</button>
+                          <button id="send" type="submit" class="btn btn-success">Créer le collaborateur</button>
                         </div>
                       </div>
                     </form>
