--- a/views/notes_de_frais.html
+++ b/views/notes_de_frais.html
@@ -244,28 +244,19 @@
           </div>
           <div class="x_content">
 
-            <table id="datatable-buttons" class="table table-striped table-bordered">
+            <table id="noteFrais" class="table table-striped table-bordered">
 
               <thead>
-
                 <tr>
                   <th>Mission</th>
-                  <th>catégorie frais</th>
+                  <th>Catégorie frais</th>
                   <th>Justificatif</th>
                   <th>Statut</th>
-                  <th></th>
-                  <th>operation</th>
+                  <th style="text-align: center">Operation</th>
                 </tr>
+
               </thead>
               <tbody>
-                <tr>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr>
               </tbody>
             </table> 
 
@@ -408,53 +399,21 @@
     $('#moisNf').val(month+" "+yyyy);
 
 
+
     var handleDataTableButtons = function() {
-      if ($("#datatable-buttons").length) {
-        $("#datatable-buttons").DataTable({
+      if ($("#noteFrais").length) {
+        $("#noteFrais").DataTable({
           dom: "Bfrtip",
           buttons: [
           {
             text : "<span class='fa fa-plus'></span> Ajouter une ligne",
             action : function () {
-
               setTimeout(
                 function () {
-
                   $('#addForm').modal({backdrop: 'static', keyboard: true})
-
                 }, 500)
             }
-
-
           },
-
-          ],
-          responsive: true
-        });
-      }
-    };
-
-
-    var handleDataTableButtons2 = function() {
-      if ($("#datatable2-buttons").length) {
-        $("#datatable2-buttons").DataTable({
-          dom: "Bfrtip",
-          buttons: [
-          {
-            text : "<span class='fa fa-plus'></span> Ajouter une ligne",
-            action : function () {
-
-              setTimeout(
-                function () {
-
-                  $('#addForm2').modal({backdrop: 'static', keyboard: true})
-
-                }, 500)
-            }
-
-
-          },
-
           ],
           responsive: true
         });
@@ -470,55 +429,20 @@
       };
     }();
 
-    TableManageButtons2 = function() {
-      "use strict";
-      return {
-        init: function() {
-          handleDataTableButtons2();
-        }
-      };
-    }();
-
-    $('#datatable').dataTable();
-
-    $('#datatable-keytable').DataTable({
-      keys: true
-    });
-
-    $('#datatable-responsive').DataTable();
-
-    $('#datatable-scroller').DataTable({
-      ajax: "js/datatables/json/scroller-demo.json",
-      deferRender: true,
-      scrollY: 380,
-      scrollCollapse: true,
-      scroller: true
-    });
-
-    $('#datatable-fixed-header').DataTable({
-      fixedHeader: true
-    });
-
-    var $datatable = $('#datatable-checkbox');
-
-    $datatable.dataTable({
-      'order': [[ 1, 'asc' ]],
-      'columnDefs': [
-      { orderable: false, targets: [0] }
-      ]
-    });
-    $datatable.on('draw.dt', function() {
-      $('checkbox input').iCheck({
-        checkboxClass: 'icheckbox_flat-green'
-      });
-    });
-
+    
     TableManageButtons.init();
-    TableManageButtons2.init();
+
   });
 
 
   var id_collabo ; 
+  var etat_ligne_frais  ; 
+  var categorie_frais ;
+  var mission ;
+  var taille_LF;
+  var tabID =new Array();
+
+
 
   $.ajax({
     url :"/name",
@@ -530,42 +454,177 @@
 
       $(doc).each(function() {
         id_collabo = $(this)[0]["id"];
-        console.log("ssss"+id_collabo);
 
 
         $.ajax({
           url :"/getNDF",
           type:'GET',
           dataType: 'json',
-          data: {id : id_collabo},
+          data: {id : id_collabo,
+            moi: "03",
+            annee: "2017"},
 
           success: function(doc){
 
+            taille_LF =doc.length ; 
+            console.log(taille_LF);
             $(doc).each(function() {
-              console.log($(this));
+            var id_nf = $(this)[0]["id"];
+            tabID.push(id_nf);
+            console.log("TABID note Frais = " + tabID);
+              
+
+              $.ajax({
+                url :"/getLDF",
+                type:'GET',
+                dataType: 'json',
+                data: {id : id_nf},
+
+                success: function(doc){
+                  $(doc).each(function() {
+                   id_categorie_frais = $(this)[0]["id_categorie_frais"];
+                   id_etat_ligne_frais = $(this)[0]["id_etat_ligne_frais"];
+                   id_mission = $(this)[0]["id_mission"];
+                
+
+                 })
+
+                }
+
+              });
+
+
 
             })
-
-            if(nom_service != "RH" && role_collabo != "Dirigeant"){
-              $('#filtre_services').hide();
-            }
-
 
           }
 
         });
 
-        
       })
 
 
-      
+
 
 
 
     }
 
   });
+                  // for(i=0; i<taille_LF; i++){
+
+                  // }
+                  
+
+
+
+
+
+
+                                                      // Requete Pour recuperer l'etat de la ligne de Frais 
+                                                      // $.ajax({
+                                                      //   url :"/getEtatLDF",
+                                                      //   type:'GET',
+                                                      //   dataType: 'json',
+                                                      //   data: {id : id_etat_ligne_frais},
+
+                                                      //   success: function(doc){
+
+                                                      //     $(doc).each(function() {
+
+                                                      //       etat_ligne_frais = $(this)[0]["nom"];
+
+
+                                                      //     })
+
+                                                      //   }
+
+                                                      // });
+                                                      // // Requete Pour recuperer l'etat de la ligne de Frais 
+                                                      // // Requete Pour recuperer la categorie de la ligne de Frais 
+                                                      // $.ajax({
+                                                      //   url :"/getCatLDF",
+                                                      //   type:'GET',
+                                                      //   dataType: 'json',
+                                                      //   data: {id : id_categorie_frais},
+
+                                                      //   success: function(doc){
+
+                                                      //     $(doc).each(function() {
+                                                      //       categorie_frais  = $(this)[0]["nom"];
+
+
+                                                      //     })
+
+
+
+
+                                                      //   }
+
+                                                      // });
+                                                      //   // Requete Pour recuperer la categorie de la ligne de Frais 
+                                                      //   // Requete Pour recuperer la mission de la ligne de Frais 
+                                                      //   $.ajax({
+                                                      //     url :"/missions",
+                                                      //     type:'GET',
+                                                      //     dataType: 'json',
+                                                      //     data: {id : id_mission},
+
+                                                      //     success: function(doc){
+
+                                                      //       $(doc).each(function() {
+                                                      //         mission  = $(this)[0]["nom"];
+
+                                                      //         /*  Remplissage de  tableau  */
+
+                                                      //         var trHTML = '';
+                                                      //         trHTML += '<tr><td>' + mission + '</td><td>' + categorie_frais + '</td><td>' + mission + '</td><td>' + etat_ligne_frais + '</td><td align="center" valign="middle" >' +
+                                                      //         ' <button type="button" class="btn btn-round btn-info"><a style="color: black" title = "Editer la ligne"><i class="fa fa-pencil"></i> </a></button>  &nbsp;&nbsp;&nbsp;<button type="button" class="btn btn-round btn-danger"><a style="color: black" title = "Supprimer la ligne" ><i class="fa fa-trash-o"></i></a> </button> ' 
+
+                                                      //         + '</td></tr>';
+
+                                                      //         $('#noteFrais').append(trHTML);
+                                                      //       })
+
+
+
+
+                                                      //     }
+
+                                                      //   });
+                      // Requete Pour recuperer la mission de la ligne de Frais 
+
+//                     })
+
+
+
+
+
+
+
+
+
+
+
+// }
+
+// });
+
+
+
+
+
+// })
+
+
+
+
+// }
+
+// });
+
+
+
 
 
 
